<resources>
    <string name="app_name">OtherWork</string>
    <string name="change_language">Change Language</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name<font fgcolor='#F44336'> *</font></string>
    <string name="please_enter_full_name">please enter full name</string>
    <string name="password">Password<font fgcolor='#F44336'> *</font></string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="forgot_username_password"><![CDATA[<u>Forgot username/password?</u>]]></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><![CDATA[<u>Sign up</u>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invoice">Invoice</string>
    <string name="amount">Amount</string>
    <string name="liter">Liter</string>
    <string name="gasoline_kind">Gasoline kind</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay">Pay</string>
    <string name="print">Print</string>
    <string name="my_profile">My Profile</string>
    <string name="choose_print_method">Choose print method</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>

</resources>