<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".auth.ActivityLogin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvChangeLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_change_language"
                android:gravity="center_vertical"
                android:text="@string/change_language"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvChangeLanguage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:text="@string/welcome"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edFullName"
                style="@style/edittext_background"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_profile"
                android:drawableTint="@color/gray"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/please_enter_full_name"
                android:textColor="@color/Error_700"
                android:textSize="10sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/edFullName"
                app:layout_constraintTop_toBottomOf="@id/edFullName"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorFullName"
                tools:ignore="SmallSp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                tools:ignore="HardcodedText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    style="@style/edittext_background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_profile"
                    android:drawableTint="@color/gray"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/please_enter_your_password"
                android:textColor="@color/Error_700"
                android:textSize="10sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tilPassword"
                app:layout_constraintTop_toBottomOf="@id/tilPassword"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="7dp"
                android:text="@string/forgot_username_password"
                android:textColor="@color/gray"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/tilPassword"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorPassword"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                style="@style/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toStartOf="@+id/btnBiometric"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBiometric"
                style="@style/button_background"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                android:backgroundTint="@color/green"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnSignIn"
                app:layout_constraintTop_toTopOf="@+id/btnSignIn" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutDontHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/btnBiometric">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/green"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutDontHaveAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>